[gd_scene load_steps=3 format=3 uid="uid://dg63ln4n0tu00"]

[ext_resource type="Script" path="res://src/pack_preview.gd" id="1_44g4h"]
[ext_resource type="Texture2D" uid="uid://dwi4nguld0m87" path="res://assets/icons/icon_circle.png" id="2_00qtq"]

[node name="PackPreview" type="PanelContainer"]
script = ExtResource("1_44g4h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IconContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(85, 64)
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="icon" type="TextureRect" parent="MarginContainer/HBoxContainer/IconContainer"]
layout_mode = 2
texture = ExtResource("2_00qtq")
stretch_mode = 3

[node name="LabelsContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LabelsContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="name" type="Label" parent="MarginContainer/HBoxContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="version" type="Label" parent="MarginContainer/HBoxContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
text = "Version"

[node name="tagline" type="Label" parent="MarginContainer/HBoxContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
text = "Tagline
"
